<resources>
    <string name="app_name">Force Touch Detector</string>
    <string name="xposed_description">Force Touch for Android</string>

    <string name="saved">Saved</string>

    <!-- Notification -->
    <string name="state_running">Running</string>
    <string name="state_enabled">Enabled</string>
    <string name="state_disabled">Disabled</string>
    <string name="state_floating_action">Floating Action</string>

    <!-- Area Activity -->
    <string name="label_detection_area">@string/title_detection_area</string>
    <string name="title_area_size">Size</string>
    <string name="area_size_width">W: </string>
    <string name="area_size_height">H: </string>
    <string name="title_area_pivot">Pivot</string>
    <string name="area_pivot_x">X: </string>
    <string name="area_pivot_y">Y: </string>
    <string name="mirror_switch">Mirror: </string>
    <string name="reverse_switch">Reverse: </string>

    <!-- Threshold Activity -->
    <string name="please_tap_d1">Tap this\n%1$d times or more</string>
    <string name="please_force_touch_d1">Force Touch this\n(press with flat thumb)\n%1$d times or more</string>
    <string name="parameter_default">-----------</string>
    <string name="max_f1">Max: %1$.04f</string>
    <string name="min_f1">Min: %1$.04f</string>
    <string name="raw_f1">Raw: %1$.04f</string>
    <string name="description_threshold">Input number between Max and Min by trial and error</string>
    <string name="hint_threshold">Threshold</string>
    <string name="hint_threshold_charging">Threshold (charging)</string>
    <!-- Force Touch -->
    <string name="label_force_touch_threshold">Upper Threshold</string>
    <!-- Knuckle -->
    <string name="label_knuckle_touch_threshold">Lower Threshold</string>
    <string name="please_knuckle_touch_d1">Touch with Knuckle\n%1$d times or more</string>

    <!-- Action Picker -->
    <string name="tools">Tools</string>
    <string name="apps">Apps</string>
    <string name="shortcuts">Shortcuts</string>
    <string name="none">None</string>
    <!-- Tool -->
    <!-- key action -->
    <string name="action_back">Back</string>
    <string name="action_home">Home</string>
    <string name="action_recents">Recents</string>
    <string name="action_forward">Forward</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_volume_up">Volume Up</string>
    <string name="action_volume_down">Volume Down</string>
    <string name="action_screenshot">Screenshot</string>
    <string name="action_lock_screen">Lock Screen</string>
    <string name="action_last_app">Last App</string>
    <string name="action_menu">Menu</string>
    <string name="action_brightness_up">Brightness Up</string>
    <string name="action_brightness_down">Brightness Down</string>
    <!-- status bar -->
    <string name="action_notifications">Notifications</string>
    <string name="action_quick_settings">Quick Settings</string>
    <!-- internal -->
    <string name="action_kill">Kill App</string>
    <string name="action_power_menu">Power Menu</string>
    <string name="action_select_keyboard">Select Keyboard</string>
    <!-- touch event -->
    <string name="action_double_tap">Double Tap</string>
    <string name="action_long_press">Long Press</string>
    <string name="action_long_press_full">Long Press (Fully Simulated)</string>
    <string name="action_scroll_up">Scroll Up</string>
    <string name="action_scroll_down">Scroll Down</string>
    <!-- local app -->
    <string name="action_floating_action">Floating Action</string>

    <string name="not_found">Not found</string>

    <!-- App Select Activity -->
    <string name="only_selected">Only selected</string>

    <!-- Floating Action -->
    <string name="label_floating_action">@string/header_floating_action</string>
    <string name="test">Test</string>
    <string name="note_floating_action">Enable at least one detector</string>

    <!-- Header -->
    <string name="title_caution">Caution</string>
    <string name="summary_caution">FTD hacks your all touch event and makes your phone gone if you set incorrect value to threshold. Notification is emergency button to open this screen to disable FTD because this mod does not work on them always.</string>
    <!-- Setting -->
    <string name="category_setting">Setting</string>
    <string name="header_general">General</string>
    <string name="header_floating_action">Floating Action</string>
    <string name="category_detector">Detector</string>
    <string name="title_detector_method">Method</string>
    <string name="size">Size</string>
    <string name="pressure">Pressure</string>
    <string name="header_force_touch">Force Touch</string>
    <string name="header_knuckle_touch">Knuckle Touch</string>
    <string name="summary_troubleshooting">Some issues are reported:\n - Touch pressure is changed while charging\n - Can not force touch with other fingers\nThe solution is Wiggle Touch.</string>
    <string name="header_wiggle_touch">Wiggle Touch</string>
    <string name="header_scratch_touch">Scratch Touch</string>
    <string name="message_unlock">You have to get a key app from donate button to unlock the latest feature.</string>
    <!-- Information -->
    <string name="category_information">Information</string>
    <string name="title_about">About</string>
    <string name="title_support">Support</string>
    <string name="summary_support">Tap to open support thread on XDA</string>
    <string name="title_donate">Donate</string>
    <string name="summary_donate">Tap to open Google Play</string>

    <string name="unit_millisecond">msec</string>

    <!-- Color BEGIN -->
    <string name="red">Red</string>
    <string name="pink">Pink</string>
    <string name="purple">Purple</string>
    <string name="deep_purple">Deep Purple</string>
    <string name="indigo">Indigo</string>
    <string name="blue">Blue</string>
    <string name="light_blue">Light Blue</string>
    <string name="cyan">Cyan</string>
    <string name="teal">Teal</string>
    <string name="green">Green</string>
    <string name="light_green">Light Green</string>
    <string name="lime">Lime</string>
    <string name="yellow">Yellow</string>
    <string name="amber">Amber</string>
    <string name="orange">Orange</string>
    <string name="deep_orange">Deep Orange</string>
    <string name="brown">Brown</string>
    <string name="grey">Grey</string>
    <string name="blue_grey">Blue Grey</string>
    <string name="black">Black</string>
    <string name="transparent">Transparent</string>
    <!-- Color END -->

    <!-- General -->
    <!-- Detector -->
    <string name="title_detection_area">Detection Area</string>
    <string name="title_detection_window">Detection Window</string>
    <string name="title_detection_sensitivity">Detection Sensitivity</string>
    <string name="message_detection_sensitivity">0 to about 20 depending on hardware.\nIf 0, Force Touch is always interpreted as a flick. If too high value, it is always tap.</string>
    <string name="title_extra_long_press_timeout">Extra Long Press Timeout</string>
    <string name="title_blacklist">Blacklist</string>
    <string name="summary_blacklist">Stop app process for changes to take effect</string>
    <string name="title_allow_unknown_input_type">Unknown Input Type</string>
    <string name="summary_allow_unknown_input_type">Allow unknown input type to detect touch for some game frameworks.</string>
    <string name="title_single_touch_mode">Single Touch Mode</string>
    <string name="summary_single_touch_mode">Cancel by multi touch</string>
    <!-- Feedback -->
    <string name="category_feedback">Feedback</string>
    <string name="title_vibration">Vibration</string>
    <string name="title_ripple_color">Ripple Color</string>
    <!-- Display -->
    <string name="category_display">Display</string>
    <string name="title_show_disabled_action_toast">Disabled-Action Toast</string>
    <string name="title_show_enabled_action_toast">Enabled-Action Toast</string>
    <string name="title_show_notification">Notification</string>
    <string name="summary_show_notification">You can open this screen from notification to disable FTD even if you set incorrect value to threshold and FTD grabs all touch events.</string>
    <string name="title_hide_app_icon">Hide App Icon</string>

    <!-- Floating Action -->
    <string name="title_floating_action_list">Actions</string>
    <string name="title_floating_action_button_color">Button Color</string>
    <string name="title_floating_action_background_color">Background Color</string>
    <string name="title_floating_action_background_alpha">Background Alpha</string>
    <string name="message_floating_action_background_alpha">0(transparent) to 255(opaque)</string>
    <string name="title_floating_action_timeout">Timeout</string>
    <string name="message_floating_action_timeout">Millisecond\n\"0\" is to disable</string>
    <string name="title_floating_action_movable">Movable</string>
    <string name="title_floating_action_recents">Show Recent Apps</string>
    <string name="summary_floating_action_recents">Fill the arc with recent apps</string>
    <string name="title_floating_action_sticky_navigation">Sticky Navigation</string>
    <string name="title_use_local_fab">Use Another Method</string>
    <string name="summary_use_local_fab">Switch if you get force close</string>

    <!-- Force Touch -->
    <string name="title_large_touch_action">Action</string>
    <!-- Threshold -->
    <string name="title_enable">Master Switch</string>
    <string name="title_threshold">Threshold</string>
    <string name="summary_threshold">Practice and adjust Force Touch</string>
    <!-- Action -->
    <string name="category_action">Action</string>
    <string name="title_action_tap">Tap</string>
    <string name="title_action_long_press">Long Press</string>
    <string name="category_gesture">Gesture</string>
    <string name="title_action_double_tap">Double Tap</string>
    <string name="title_action_flick_left">Flick Left</string>
    <string name="title_action_flick_right">Flick Right</string>
    <string name="title_action_flick_up">Flick Up</string>
    <string name="title_action_flick_down">Flick Down</string>

    <!-- Wiggle Touch -->
    <string name="title_how_to">How To</string>
    <string name="how_to_wiggle_touch">Start a touch with small touch area, and then increase the area without releasing your finger. Threshold value is calculated by \"initial pressure/size * ratio\".</string>
    <string name="title_magnification">Ratio</string>
    <string name="message_magnification_wiggle">More than 1.0.\nSmall value makes detector sensitive.</string>
    <string name="title_force_touch_screen">Force Touch Screen</string>
    <string name="summary_force_touch_screen">Launch seamless force touch app. Requires Floating Action or compatible app. Other detectors except Scratch Touch, and actions of Wiggle Touch are disabled. (Requires reboot)</string>

    <!-- Scratch Touch -->
    <string name="how_to_scratch_touch">Start a touch with large touch area, and then reduce the area without releasing your finger. Threshold value is calculated by \"initial pressure/size * ratio\".</string>
    <string name="message_magnification_scratch">Less than 1.0.\nBig value makes detector sensitive.</string>

</resources>
