<!--
  ~ Copyright 2015 Takagi Katsuyuki
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="MergeRootFrame">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="@dimen/toolbar_elevation"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <!-- Contents -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <!-- Input Field -->
        <RelativeLayout
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/threshold_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_threshold"/>

            <!-- Pressure Threshold -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/threshold_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/threshold_description">

                <EditText
                    android:id="@+id/threshold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_threshold"
                    android:inputType="numberDecimal">

                    <requestFocus/>
                </EditText>
            </android.support.design.widget.TextInputLayout>

            <!-- Pressure Threshold (Charging) -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/threshold_charging_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/threshold_container">

                <EditText
                    android:id="@+id/threshold_charging"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_threshold_charging"
                    android:inputType="numberDecimal"/>
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>

        <!-- Practice -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_above="@id/input"
            android:layout_alignParentTop="true">

            <RelativeLayout
                android:id="@+id/practice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!-- for tap -->
                <TextView
                    android:id="@+id/filtered_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parameter_default"
                    android:textColor="?attr/colorAccent"/>

                <TextView
                    android:id="@+id/raw_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/parameter_default"/>

                <Button
                    android:id="@+id/button_small"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_below="@id/filtered_small"
                    android:text="@string/please_tap_d1"/>

                <!-- for Force Touch -->
                <TextView
                    android:id="@+id/filtered_large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/button_small"
                    android:text="@string/parameter_default"
                    android:textColor="?attr/colorAccent"/>

                <TextView
                    android:id="@+id/raw_large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/button_small"
                    android:text="@string/parameter_default"/>

                <Button
                    android:id="@+id/button_large"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_below="@id/filtered_large"
                    android:text="@string/please_force_touch_d1"/>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>
